# requests-tui

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.sh
src/: app.rs  cli.rs  main.rs  tui.rs
src/features/: mod.rs
src/features/collections/: mod.rs  view.rs
src/features/environments/: mod.rs  view.rs
src/features/prompt/: mod.rs  view.rs
src/features/request/: mod.rs  view.rs
src/features/response/: mod.rs  view.rs
src/shared/: curl.rs  http.rs  mod.rs
src/shared/bruno/: discovery.rs  dotenv.rs  interpolate.rs  mod.rs  model.rs  parser.rs  request.rs
src/shared/ui/: mod.rs  selection.rs  theme.rs
